<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/bg1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Kalkulator">

    <androidx.appcompat.widget.Toolbar
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/kembali"
            android:background="@drawable/ic_baseline_arrow_back_ios_24"
            android:layout_width="30dp"
            android:layout_height="30dp"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:padding="15dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:text="MASUKAN DUA ANGKA"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/nilai1"
            android:textColor="#FFFFFF"
            android:hint="Masukan Nilai1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

        <EditText
            android:textColor="#FFFFFF"
            android:id="@+id/nilai2"
            android:hint="Masukan Nilai 2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:padding="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/plus"
            android:text="@string/plus"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="15dp" />

        <Button
            android:id="@+id/mins"
            android:text="@string/mins"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="15dp" />
        <Button
            android:id="@+id/kali"
            android:text="@string/x_kali"
            android:layout_marginLeft="15dp"
            android:background="@drawable/bg2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/bagi"
            android:text="@string/_bagi"
            android:layout_marginLeft="15dp"
            android:background="@drawable/bg2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="15dp" />
    </LinearLayout>
    <LinearLayout
        android:padding="15dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bersikan"
            android:background="@drawable/bg2"
            android:text="@string/bersihkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="20dp"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/hasil"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="20dp"
            android:textColor="#FFFFFF"
            android:id="@+id/hasil"
            android:text="@string/_0"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>